# osearch

./: App.py  pyproject.toml
oracle_search/: __init__.py  pretty_logger.py
oracle_search/chain/: base.py
oracle_search/conf/: conf.py  env.py
oracle_search/langgraph/: oracle_search.py
oracle_search/models/: base.py  documents.py
oracle_search/tools/: web_tools.py
oracle_search/web_loader/: search.py  web_loader.py
oracle_search/web_loader/fetchers/: base.py  github.py  namu_wiki.py  naver.py  youtube.py
